{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 13,
  "lineage": "b5da8d98-a92e-874f-d895-b60bdc4963e1",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "montreal-to-toronto-egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "1-65535"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-02-01T09:18:06.006-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "10.1.0.0/16",
              "10.2.0.0/17",
              "10.2.128.0/17"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/pingdirectory-358917/global/firewalls/montreal-to-toronto-egress",
            "log_config": [],
            "name": "montreal-to-toronto-egress",
            "network": "https://www.googleapis.com/compute/v1/projects/pingdirectory-358917/global/networks/montreal-network",
            "priority": 1000,
            "project": "pingdirectory-358917",
            "self_link": "https://www.googleapis.com/compute/v1/projects/pingdirectory-358917/global/firewalls/montreal-to-toronto-egress",
            "source_ranges": [
              "172.16.0.0/16",
              "192.168.128.0/17",
              "192.168.64.0/18"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.montreal-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "montreal-to-toronto-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "1-65535"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-02-01T09:18:05.818-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/pingdirectory-358917/global/firewalls/montreal-to-toronto-ingress",
            "log_config": [],
            "name": "montreal-to-toronto-ingress",
            "network": "https://www.googleapis.com/compute/v1/projects/pingdirectory-358917/global/networks/toronto-network",
            "priority": 1000,
            "project": "pingdirectory-358917",
            "self_link": "https://www.googleapis.com/compute/v1/projects/pingdirectory-358917/global/firewalls/montreal-to-toronto-ingress",
            "source_ranges": [
              "172.16.0.0/16",
              "192.168.128.0/17",
              "192.168.64.0/18"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.toronto-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "toronto-to-montreal-egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "1-65535"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-02-01T09:18:05.821-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "172.16.0.0/16",
              "192.168.128.0/17",
              "192.168.64.0/18"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/pingdirectory-358917/global/firewalls/toronto-to-montreal-egress",
            "log_config": [],
            "name": "toronto-to-montreal-egress",
            "network": "https://www.googleapis.com/compute/v1/projects/pingdirectory-358917/global/networks/toronto-network",
            "priority": 1000,
            "project": "pingdirectory-358917",
            "self_link": "https://www.googleapis.com/compute/v1/projects/pingdirectory-358917/global/firewalls/toronto-to-montreal-egress",
            "source_ranges": [
              "10.1.0.0/16",
              "10.2.0.0/17",
              "10.2.128.0/17"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.toronto-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "toronto-to-montreal-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "1-65535"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-02-01T09:18:05.796-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/pingdirectory-358917/global/firewalls/toronto-to-montreal-ingress",
            "log_config": [],
            "name": "toronto-to-montreal-ingress",
            "network": "https://www.googleapis.com/compute/v1/projects/pingdirectory-358917/global/networks/montreal-network",
            "priority": 1000,
            "project": "pingdirectory-358917",
            "self_link": "https://www.googleapis.com/compute/v1/projects/pingdirectory-358917/global/firewalls/toronto-to-montreal-ingress",
            "source_ranges": [
              "10.1.0.0/16",
              "10.2.0.0/17",
              "10.2.128.0/17"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.montreal-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "montreal-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/pingdirectory-358917/global/networks/montreal-network",
            "mtu": 0,
            "name": "montreal-network",
            "project": "pingdirectory-358917",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/pingdirectory-358917/global/networks/montreal-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "toronto-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/pingdirectory-358917/global/networks/toronto-network",
            "mtu": 0,
            "name": "toronto-network",
            "project": "pingdirectory-358917",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/pingdirectory-358917/global/networks/toronto-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "montreal_sub_net",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-02-01T09:00:23.088-08:00",
            "gateway_address": "172.16.0.1",
            "id": "projects/pingdirectory-358917/regions/northamerica-northeast1/subnetworks/montreal-subnetwork",
            "ip_cidr_range": "172.16.0.0/16",
            "name": "montreal-subnetwork",
            "network": "https://www.googleapis.com/compute/v1/projects/pingdirectory-358917/global/networks/montreal-network",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "pingdirectory-358917",
            "purpose": "PRIVATE",
            "region": "northamerica-northeast1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "192.168.64.0/18",
                "range_name": "montreal-pod-range-1"
              },
              {
                "ip_cidr_range": "192.168.128.0/17",
                "range_name": "montreal-service-range-2"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/pingdirectory-358917/regions/northamerica-northeast1/subnetworks/montreal-subnetwork",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.montreal-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "toronto_sub_net",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-02-01T09:00:25.708-08:00",
            "gateway_address": "10.1.0.1",
            "id": "projects/pingdirectory-358917/regions/northamerica-northeast2/subnetworks/toronto-subnetwork",
            "ip_cidr_range": "10.1.0.0/16",
            "name": "toronto-subnetwork",
            "network": "https://www.googleapis.com/compute/v1/projects/pingdirectory-358917/global/networks/toronto-network",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "pingdirectory-358917",
            "purpose": "PRIVATE",
            "region": "northamerica-northeast2",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.2.0.0/17",
                "range_name": "toronto-pod-range-1"
              },
              {
                "ip_cidr_range": "10.2.128.0/17",
                "range_name": "toronto-service-range-2"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/pingdirectory-358917/regions/northamerica-northeast2/subnetworks/toronto-subnetwork",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.toronto-vpc"
          ]
        }
      ]
    }
  ]
}